Implement basic endpoints + secure them
